# TreeCode

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: CMake-Build.yml  black-duck-security-scan.yml  codeql.yml
examples/: CmakeLists.txt
examples/DID_Lists/: main.cpp
examples/Did_Tree/: main.cpp  print.cpp
examples/Did_Tree/includes/: print.hpp
src/: treecode.cpp
src/core/: container.cpp  element.cpp  group.cpp  template.cpp  tmpl.cpp
src/core/includes/: base.hpp  common.hpp  container.hpp  element.hpp  exception.hpp  group.hpp  item.hpp  template.hpp  tmpl.hpp  treecode.hpp
src/includes/: treecode.hpp
